# bigint

./: LICENSE  README.md  bigint.cabal  stack.yaml
src/Data/: Arith.hs  BigInt.hs  BigWord.hs  BigWordClass.hs  BigWordUnpack.hs
test/: BadPerformanceExample  BadPerformanceExample.hs  DumbPerformance.hs  Performance.hs
