name:                bigint
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ryanreich/bigint#readme
license:             BSD3
license-file:        LICENSE
author:              Ryan Reich
maintainer:          eitan@morphism.tech
copyright:           MIT
category:            none
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     
    Data.Arith
  build-depends:       
    base >= 4.7 && < 5,
    ghc-prim
  default-language:    Haskell2010

-- executable bigint-exe
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   build-depends:       base
--                      , bigint
--   default-language:    Haskell2010
-- 
-- test-suite bigint-test
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base
--                      , bigint
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ryanreich/bigint
