name:                bigint
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ryanreich/bigint#readme
license:             BSD3
license-file:        LICENSE
author:              Ryan Reich
maintainer:          eitan@morphism.tech
copyright:           MIT
category:            none
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC >= 8.2.0

library
  hs-source-dirs:      src
  exposed-modules:     
    Data.BigWord
  build-depends:       
    base >= 4.7 && < 5,
    ghc-prim,
    template-haskell
  ghc-options:
    -fllvm
  default-language:    Haskell2010

-- executable bigint-exe
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   build-depends:       base
--                      , bigint
--   default-language:    Haskell2010
-- 

benchmark bigint-performance
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             DumbPerformance.hs
  build-depends:       
    base,
    bigint,
    time
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -fllvm
  default-language:    Haskell2010

benchmark bigint-badtest
  buildable: False
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             BadPerformanceExample.hs
  build-depends:       
    base,
    bigint,
    time,
    ghc-prim
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -fllvm
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ryanreich/bigint
